feat: add nft txs api
