# api/dto/nft.go
@@ -50,3 +50,51 @@ type NFTsByAddressResponse struct {
 	Tokens     []NFTByAddressResponse `json:"tokens"`
 	Pagination PaginationResponse     `json:"pagination"`
 }
+
+type NFTMintInfo struct {
+	Address   string `json:"address"`
+	Hash      string `json:"hash"`
+	Height    int64  `json:"height"`
+	Timestamp string `json:"timestamp"`
+}
+
+type NFTMintInfoResponse struct {
+	Height    int64  `json:"height"`
+	Minter    string `json:"minter"`
+	Timestamp string `json:"timestamp"`
+	TxHash    string `json:"txhash"`
+}
+type NFTMutateEventResponse struct {
+	MutatedFieldName string `json:"mutated_field_name"`
+	NewValue         string `json:"new_value"`
+	OldValue         string `json:"old_value"`
+	Remark           string `json:"remark"`
+	Timestamp        string `json:"timestamp"`
+}
+
+type NFTMutateEventsResponse struct {
+	Items      []NFTMutateEventResponse `json:"items"`
+	Pagination PaginationResponse       `json:"pagination"`
+}
+
+type NFTTx struct {
+	IsNFTBurn     bool   `json:"is_nft_burn"`
+	IsNFTMint     bool   `json:"is_nft_mint"`
+	IsNFTTransfer bool   `json:"is_nft_transfer"`
+	Hash          string `json:"hash"`
+	Height        int64  `json:"height"`
+	Timestamp     string `json:"timestamp"`
+}
+
+type NFTTxResponse struct {
+	IsNFTBurn     bool   `json:"is_nft_burn"`
+	IsNFTMint     bool   `json:"is_nft_mint"`
+	IsNFTTransfer bool   `json:"is_nft_transfer"`
+	Timestamp     string `json:"timestamp"`
+	TxHash        string `json:"txhash"`
+}
+
+type NFTTxsResponse struct {
+	Items      []NFTTxResponse    `json:"items"`
+	Pagination PaginationResponse `json:"pagination"`
+}
